package Terreno;

public class Bosque extends Terreno{
}
