package Terreno;

public class Campo extends Terreno{
}
