package Terreno;

public class Colina extends Terreno{
}
