package Terreno;

public class Montaña extends Terreno{
}
