package Terreno;

public class Pastizal extends Terreno{
}
