@startuml Diagrama De CLASES

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ======================
' CLASES DEL MODELO
' ======================

class java.Terreno
class Bosque
class Pastizal
class Campo
class Montaña
class Colina
class Desierto

java.Terreno <|-- Bosque
java.Terreno <|-- Pastizal
java.Terreno <|-- Montaña
java.Terreno <|-- Campo
java.Terreno <|-- Colina
java.Terreno <|-- Desierto


@enduml